--- a/less/about-page.less
+++ b/less/about-page.less
@@ -5,16 +5,19 @@
     text-align: center;
 
     @media @large-screen{
-        position: absolute;
         left: 200;
         top: 80;
     }
 
     @media @phone{
-        position: absolute;
         right: 640;
         top: 30;
         width: 70%;
+    }
+
+    @media @small-phone{
+        border: solid red 1px;
+        right: 495;
     }
 }
 
