--- a/less/global.less
+++ b/less/global.less
@@ -23,6 +23,10 @@
   h2 {
     font-size: 3.2rem;
     letter-spacing: 2px;
+
+    @media @small-phone{
+      font-size: 2.5rem;
+    }
   }
   
   h3 {
