--- a/less/header.less
+++ b/less/header.less
@@ -40,6 +40,11 @@ header {
              margin: 0 auto;
          }
 
+         @media @small-phone{
+             font-size: 2.5rem;
+             padding-left: 6px;
+         }
+
      }
 
      nav {
