--- a/less/variables.less
+++ b/less/variables.less
@@ -15,3 +15,5 @@
 @large-screen: ~'(min-width: 1920px)';
 
 @phone: ~'(max-width: 500px)';
+
+@small-phone: ~'(max-width: 320px)';
